feat: add style and visual

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
     <div class="container">
         <div class="player-box">
-            <div class="img-box"></div>
-            <div class="player">
-                
-                <audio src=""></audio>
+            <div class="btn-box">
+                <button id="prev-btn" class="prev-btn"></button>
+                <button id="play-btn" class="play-btn"></button>
+                <button id="pause-btn" class="pause-btn"></button>
+                <button id="stop-btn" class="stop-btn"></button>
+                <button id="next-btn" class="next-btn"></button>
             </div>
+            <audio src="assets/audio/we-all-lift-together.mp3"></audio>         
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
