feat: change color theme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="container">
         <div class="player-box">
+            <div class="duration-volume-box">
+                <button></button>
+            </div>
             <div class="btn-box">
                 <button id="prev-btn" class="prev-btn"></button>
                 <button id="play-btn" class="play-btn"></button>
